# google_calendar_sync

./: .dockerignore  .example.env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: example.config.yaml
config/example.secrets/: credentials.json  notion.json
src/: app.py  main.py  test.py
src/api_client/: google.py  ical.py  notion.py
src/common/: ical.py  notion.py  utils.py
src/jobs/: sync_ical.py  sync_notion.py
src/models/: config.py  database.py  event.py  ical.py
src/transformations/: event_title.py  event_to_calendar_event.py  google_to_calendar_event.py  ical_to_calendar_event.py  notion_to_calendar_event.py  page_to_calendar_event.py
tests/: test_notion.py
